manual get first